# climate-map-tests

./: .gitignore  README.md  chart_example_from_d3-graph-gallery.html  pyproject.toml
biodiversity/: convert-biodiversity.ipynb  db_countries.py
biodiversity/csv/: BII.csv  CRS.csv  DIS.csv  EF.csv  MTI.csv  PAKA.csv  RLI.csv
biodiversity/pickle/: BII.pkl  CRS.pkl  DIS.pkl  EF.pkl  MTI.pkl  (+2 more)
census-data/: census_data4.csv  census_employment_acs5_2019.csv  get census data.ipynb  test.csv
critical habitats/: convert_to_topojson.fish  critical-habitats-topo.json
electricity lines/: project_and_topo.fish
endangered-species/: convert_to_topojson.fish
health_data/: clean data.ipynb
homelessness/: homelessness.ipynb
maps/: geoAlbersUsaPr.js  parse_world_to_ndjson.fish  project_map.fish  project_usa_map.fish  project_world_map.fish  world.ndjson
mit data/: Convert to db format.ipynb  Reverse normalized data.ipynb  clean data.ipynb  convert_highway_shapefile.fish  convert_highway_shapefile_natural_earth.fish  convert_highway_shapefile_natural_earth_north_america.fish  convert_railroads.fish  convert_shapefile.fish  data to exclude?.md  water_stress.csv
reformat-for-database/: README.md  reformat-data.ipynb
test-population-data/: GDP Per Capita USD per capita.csv  GDP USD.csv  Population people.csv
toxic sites/: Calculate summary statistics.ipynb  Combine Louisiana and Texas.ipynb  Louisiana.tsv  Texas.csv  ZipCode_Flooding.xlsx  process_geojson.fish  temp-map.geojson  texas and louisiana.csv  texas and louisiana.geojson
waterway data/: filter-waterways.fish
(+65 files in other folders)
