[tool.poetry]
authors = ["Cypress Frankenfeld <iamcypress@gmail.com>"]
description = ""
name = "data-cleaning"
version = "0.1.0"

[tool.poetry.dependencies]
census = "^0.8.17"
ipykernel = "^6.4.1"
numpy = "^1.21.2"
openpyxl = "^3.0.9"
pandas = "^1.3.3"
python = ">=3.9,<3.11"
seaborn = "^0.11.2"
us = "^2.0.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
